[package]
name = "grafbase-gateway"
version = "0.36.1"
edition.workspace = true
license = "MPL-2.0"
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[features]
default = []
lambda = [
    "federated-server/lambda",
    "tracing-subscriber/json",
    "grafbase-telemetry/lambda",
]

[dependencies]
anyhow = { workspace = true, default-features = false }
ascii.workspace = true
cfg-if.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["cargo", "wrap_help", "derive", "env"] }
federated-server.workspace = true
gateway-config.workspace = true
grafbase-telemetry = { workspace = true }
grafbase-workspace-hack.workspace = true
graph-ref.workspace = true
itertools.workspace = true
mimalloc.workspace = true
opentelemetry-aws = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }

[lints]
workspace = true

[dev-dependencies]
async-graphql-parser.workspace = true
clickhouse.workspace = true
ctor.workspace = true
duct.workspace = true
fslock.workspace = true
futures-util.workspace = true
grafbase-graphql-introspection.workspace = true
graphql-composition.workspace = true
graphql-mocks.workspace = true
handlebars.workspace = true
http.workspace = true
indoc.workspace = true
insta = { workspace = true, features = ["json", "redactions", "yaml"] }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tempfile.workspace = true
ulid.workspace = true
url.workspace = true
wiremock.workspace = true
