[package]
name = "gqlint"
version = "0.1.1"
description = "A GraphQL SDL linting CLI"
keywords = ["graphql", "linter"]
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
graphql-lint = { path = "../graphql-lint", version = "0.1.3" }
thiserror.workspace = true
grafbase-workspace-hack.workspace = true

[lints]
workspace = true
