[package]
name = "graph-ref"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grafbase-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[lints]
workspace = true
