[package]
name = "grafbase-graphql-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2.0.4"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
cynic = { workspace = true, features = ["http-reqwest"] }
cynic-introspection.workspace = true
serde = "1.0.197"
apollo-parser = "0.7.6"
apollo-encoder = "0.8.0"

