[package]
name = "grafbase-graphql-introspection"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
indoc = "2.0.5"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
cynic = { workspace = true, features = ["http-reqwest"] }
cynic-introspection.workspace = true
cynic-parser = { workspace = true,  features = ["pretty"] }
serde = "1.0.199"
grafbase-workspace-hack.workspace = true
