[package]
name = "graphql-lint"
version = "0.1.3"
description = "A GraphQL SDL linter"
keywords = ["graphql", "linter"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cynic-parser = "0.2.6"
heck = "0.5.0"
thiserror.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true
