[package]
name = "graphql-lint"
version = "0.1.3"
description = "A GraphQL SDL linter"
keywords = ["graphql", "linter"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cynic-parser.workspace = true
heck = "0.5.0"
thiserror.workspace = true
grafbase-workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false

[lints]
workspace = true
