[package]
name = "dynamodb"
version = "0.1.0"
edition = "2021"

[dependencies]
again = { version = "0.1", default-features = false, features = [
    "wasm-bindgen",
    "log",
] }
async-trait = "0.1"
aws-region-nearby = "0.1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
derivative = "2.2"
dynomite = "0.10"
fnv = "1"
futures = "0.3"
futures-channel = { version = "0.3" }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
futures-util = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
indexmap = { git = "https://github.com/bluss/indexmap", rev = "aa4ee74bec3f64f452aa107fecd2c1bd04abe66b" }
itertools = "0.10"
log = { path = "../log", features = ["with-worker"] }
lru = { version = "0.7" }
quick-error = "2"
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"
serde_json = "1"
thiserror = "1"
tracing = "0.1"

# feature = wasm
wasm-bindgen-futures = { version = "0.4", optional = true }

# feature = tokio
tokio = { version = "1", optional = true }
# feature="local"
cfg-if = "1"
indoc = { version = "1", optional = true }
maplit = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2", default-features = false, optional = true, features = [
    "wasm-client",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2", default-features = false, optional = true, features = [
    "h1-client-rustls",
] }

[features]
default = ["wasm_runtime"]
local = ["indoc", "maplit", "once_cell", "regex", "serde", "surf"]
tokio_runtime = ["tokio"]
wasm_runtime = ["wasm-bindgen-futures"]
