[package]
name = "dynamodb"
version = "0.1.0"
edition = "2021"

[dependencies]
again = { version = "0.1", default-features = false, features = [
  "wasm-bindgen",
  "log",
] }
async-trait = "0.1"
aws-region-nearby = { workspace = true }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
derivative = "2.2"
dynamodb-utils = { path = "../dynamodb-utils" }
dynomite = "0.10"
fnv = "1"
futures = "0.3"
futures-channel = { version = "0.3" }
futures-timer = { version = "3", features = ["wasm-bindgen"] }
futures-util = { version = "0.3", default-features = false, features = [
  "std",
  "async-await",
] }
graph-entities = { path = "../graph-entities" }
indexmap = { git = "https://github.com/bluss/indexmap.git", rev = "eedabaca9f84e520eab01325b305c08f3773e66c" }
itertools = "0.10"
log = { path = "../log", features = ["with-worker"] }
lru = { version = "0.10" }
quick-error = "2"
rusoto_core = { workspace = true }
rusoto_dynamodb = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-timer = { version = "0.2" }

tracing = { version = "0.1", optional = true }

# feature = wasm
wasm-bindgen-futures = { version = "0.4", optional = true }

# feature = tokio
tokio = { version = "1", optional = true }
# feature="sqlite"
cfg-if = "1"
indoc = { version = "2", optional = true }
maplit = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
regex = { version = "1", optional = true }
send_wrapper = { version = "0.6", optional = true }
serde = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, optional = true, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, optional = true, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }

[features]
default = ["wasm_runtime"]
local = []
sqlite = ["indoc", "maplit", "once_cell", "regex", "reqwest", "send_wrapper", "serde"]
tokio_runtime = ["tokio"]
wasm_runtime = ["wasm-bindgen-futures"]
tracing = ["dep:tracing"]
