[package]
name = "dynaql"
version = "3.0.31"
authors = ["sunli <scott_s829@163.com>", "Koxiaet"]
edition = "2021"
description = "A GraphQL server library implemented in Rust"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/async-graphql/"
homepage = "https://github.com/async-graphql/async-graphql"
repository = "https://github.com/async-graphql/async-graphql"
keywords = ["futures", "async", "graphql"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"

[features]
default = ["query-planning"]
unblock = ["blocking"]
string_number = []
decimal = ["rust_decimal"]
chrono-duration = ["iso8601-duration"]
password-strength-validator = ["zxcvbn"]
unstable_oneof = ["dynaql-derive/unstable_oneof"]
tracing_worker = ["logworker"]
tokio_runtime = ["dynamodb/tokio_runtime"]
wasm_runtime = ["dynamodb/wasm_runtime"]
query-planning = ["dep:query-planning"]

[dependencies]
dynaql-derive = { path = "derive", version = "3" }
dynaql-value = { path = "value", version = "3" }
dynaql-parser = { path = "parser", version = "3" }

async-lock = "2"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
cached = { version = "0.43" }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
] }
# TODO(@JeanMertz): Point to release version once latest fixes in `cynic-introspection` have been released.
cynic-introspection = { git = "https://github.com/obmarg/cynic", rev = "d7f8d585cb3fb56d9fcebe0b925a47e9659fb235" }
derivative = "2"
dynomite = "0.10"
fast_chemail = "0.9"
fnv = "1"
futures-util = { workspace = true, features = ["io", "sink"] }
http = "0.2"
indexmap = { git = "https://github.com/bluss/indexmap.git", rev = "eedabaca9f84e520eab01325b305c08f3773e66c" }
ipnet = "2.7"
itertools = { workspace = true }
mime = "0.3"
multer = "2"
nom = "7"
num-traits = "0.2"
pin-project-lite = "0.2"
regex = { workspace = true }
send_wrapper = { version = "0.6", features = ["futures"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
static_assertions = "1"
tempfile = "3"
thiserror = { workspace = true }
ulid = { version = "1", features = ["wasm"] }
url = { workspace = true, features = ["serde"] }
unindent = "0.2"
grafbase-runtime = { path = "../grafbase-runtime" }
grafbase = { path = "../grafbase", features = ["json"] }

# Query planning schema
arrow-schema = { version = "31", features = ["serde"] }

# API dependencies
query-planning = { path = "../query-planning", optional = true, default-features = false}
dynamodb = { path = "../dynamodb" }
graph-entities = { path = "../graph-entities" }
logworker = { path = "../log", package = "log", optional = true }

# Feature optional dependencies
chrono-tz = { version = "0.8", optional = true }
hashbrown = { version = "0.13", optional = true }
iso8601-duration = { version = "0.2", optional = true }
log = { version = "0.4", optional = true }
secrecy = { version = "0.8", features = ["serde"] }
tracinglib = { version = "0.1", optional = true, package = "tracing" }
uuid = { version = "1", optional = true, features = ["v4", "serde"] }
rust_decimal = { version = "1", optional = true }
smol_str = { version = "0.2", optional = true }
time = { version = "0.3", optional = true, features = [
  "parsing",
  "formatting",
  "macros",
] }

# Non-feature optional dependencies
blocking = { version = "1", optional = true }
zxcvbn = { version = "2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
once_cell = "1"
urlencoding = "2.1"
