[package]
name = "gateway-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-region-nearby = { workspace = true }
rusoto_core = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["raw_value"] }
ulid = { workspace = true }
worker = { workspace = true }

dynaql = { path = "../dynaql" }
grafbase = { path = "../grafbase", features = ["json"] }

[dev-dependencies]
sha2 = { version = "0.10", default-features = false }
