[package]
name = "graph-entities"
version = "0.1.0"
description = "Library which describe Graph Node for the DataLayer on the Gateway"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = "0.21"
derivative = "2"
dynaql-value = { path = "../dynaql/value", version = "3" }
dynomite = "0.10"
indexmap = "1"
internment = { version = "0.7", features = ["serde", "arc"] }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
rstest = "0.16"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2" }
