[package]
name = "graph-entities"
version = "0.1.0"
description = "Library which describe Graph Node for the DataLayer on the Gateway"
edition = "2021"
publish = false

[dependencies]
base64 = "0.21"
derivative = "2"
dynaql-value = { path = "../dynaql/value", version = "3" }
dynomite = "0.10"
internment = { version = "0.7", features = ["serde", "arc"] }
serde_json = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
