[package]
name = "graphql-extensions"
description = "Has extensions to be used on dynaql"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
async-trait = "0.1"
dynaql = { path = "../../common/dynaql", default-features = false }
dynaql-value = { path = "../../common/dynaql/value" }
lazy_static = "1"
log = { path = "../../common/log", features = ["with-worker"] }
grafbase = { path = "../../common/grafbase", features = ["json"] }
grafbase-runtime = { path = "../../common/grafbase-runtime" }
wasm-timer = "0.2"

[features]
local = []
