[package]
name = "jwt-verifier"
version = "0.1.0"
description = "Verify JSON Web Tokens"
edition = "2021"

[dependencies]
futures-util = "0.3"
json_dotpath = "1"
jwt-compact = { version = "0.6", default-features = false, features = [
    "clock",
    "with_rsa",
] }
secrecy = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = "1"
url = { workspace = true }
worker = { workspace = true }

log = { path = "../log" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "__rustls"] }

[dev-dependencies]
chrono = "0.4"
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.5"
