[package]
name = "log"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
log_ = { package = "log", version = "0.4" }
maplit = { version = "1.0.2", optional = true }
quick-error = "2"
sentry-cf-worker = { git = "https://github.com/grafbase/sentry-rust", branch = "stable", optional = true }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }
worker = { version = "0.0.9", optional = true }

[features]
with-worker = ["maplit", "sentry-cf-worker", "worker"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2", default-features = false, features = ["wasm-client"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2", default-features = false, features = [
    "h1-client-rustls",
] }
