[package]
name = "log"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1"
futures-util = { version = "0.3", default-features = false, features = [
    "std",
    "async-await",
] }
log_ = { package = "log", version = "0.4" }
maplit = "1"
sentry-cf-worker = { path = "../sentry-cf-worker", optional = true }
serde = { workspace = true }
strum = { version = "0.24", features = ["derive"] }
thiserror = { workspace = true }
wasm-timer = "0.2"
worker = { version = "0.0.13", optional = true }

[features]
with-worker = ["sentry-cf-worker", "worker"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2", default-features = false, features = ["wasm-client"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2", default-features = false, features = [
    "h1-client-rustls",
] }
