[package]
name = "oidc"
version = "0.1.0"
description = "Verify identity tokens used as part of the OpenID Connect flow"
edition = "2021"

[dependencies]
json_dotpath = "1"
jwt-compact = { version = "0.6", default-features = false, features = [
    "clock",
    "with_rsa",
] }
quick-error = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
worker = "0.0.11"

log = { path = "../log" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
surf = { version = "2", default-features = false, features = ["wasm-client"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
surf = { version = "2", default-features = false, features = [
    "h1-client-rustls",
] }

[dev-dependencies]
chrono = "0.4"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.5"
assert_matches = "1"
