[package]
name = "parser-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
dynaql = { path = "../dynaql" }

serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

cynic = { git = "https://github.com/obmarg/cynic", rev = "d7f8d585cb3fb56d9fcebe0b925a47e9659fb235", features = ["http-reqwest"] }
cynic-introspection = { git = "https://github.com/obmarg/cynic", rev = "d7f8d585cb3fb56d9fcebe0b925a47e9659fb235" }
http = { version = "0.2" }
Inflector = { version = "0.11", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
insta = "1"
tokio = "1"
