[package]
name = "parser-graphql"
version = "0.1.0"
edition = "2021"

[dependencies]
dynaql = { path = "../dynaql" }

serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

cynic = { version = "3.0.0-beta.3", features = ["http-reqwest"] }
cynic-introspection = "3.0.0-beta.3"
http = { version = "0.2" }
Inflector = { version = "0.11", default-features = false }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
insta = "1"
tokio = "1"
