[package]
name = "parser-openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
indexmap = "1.9"
itertools = { workspace = true }
once_cell = "1.17"
openapiv3 = "1"
petgraph = "0.6"
regex = "1.7"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2.3"

dynaql = { path = "../dynaql", features = ["tracing_worker"] }
dynaql-value = { path = "../dynaql/value" }
parser = { path = "../parser" }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
rstest = "0.17"
