[package]
name = "parser-openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11"
indexmap = "1"
once_cell = "1"
openapiv3 = "1"
petgraph = "0.6"
regex = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
url = { workspace = true }

dynaql = { path = "../dynaql", features = ["tracing_worker"] }
dynaql-value = { path = "../dynaql/value" }
parser = { path = "../parser" }

[dev-dependencies]
insta = "1"
rstest = "0.17"
