[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
dynaql-parser = { path = "../dynaql/parser" }
dynaql-value = { path = "../dynaql/value" }
dynaql = { path = "../dynaql", features = ["tracing_worker"] }
dynamodb = { path = "../dynamodb" }
case = "1"
if_chain = "1"
itertools = "0.10"
lazy_static = "1"
quick-error = "2"
regex = "1"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
url = { version = "2" }
tuple = "0.5"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
serde_json = "1"
rstest = "0.16"
assert_matches = "1.5"
