[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow-schema = { version = "31", features = ["serde"] }
dynaql-parser = { path = "../dynaql/parser" }
dynaql-value = { path = "../dynaql/value" }
dynaql = { path = "../dynaql", features = ["tracing_worker"] }
dynamodb = { path = "../dynamodb" }
grafbase-runtime = { path = "../grafbase-runtime" }
case = "1"
if_chain = "1"
itertools = "0.10"
lazy_static = { workspace = true }
quick-error = "2"
regex = "1"
secrecy = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
url = { version = "2" }
tuple = "0.5"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
serde_json = { workspace = true }
rstest = "0.16"
assert_matches = "1.5"
function_name = "0.3"
maplit = "1"
