[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
arrow-schema = { workspace = true, features = ["serde"] }
dynaql-parser = { path = "../dynaql/parser" }
dynaql-value = { path = "../dynaql/value" }
dynaql = { path = "../dynaql", features = ["tracing_worker"] }
dynamodb = { path = "../dynamodb" }
grafbase = { path = "../grafbase", features = ["json"] }
grafbase-runtime = { path = "../grafbase-runtime" }
case = "1"
if_chain = "1"
itertools = { workspace = true }
lazy_static = { workspace = true }
quick-error = "2"
regex = { workspace = true }
secrecy = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { version = "2" }
thiserror = { workspace = true }
tuple = "0.5"
futures = "0.3"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
serde_json = { workspace = true }
rstest = { workspace = true }
assert_matches = "1.5"
function_name = "0.3"
maplit = "1"
