[package]
name = "grafbase"
version = "0.1.0"
edition = "2021"
description = "The Grafbase command line interface"
license = "Apache-2.0"
homepage = "https://grafbase.com"
categories = ["command-line-utilities"]
keywords = ["grafbase"]
readme = "README.md"

[dependencies]
clap = { version = "3.1", features = ["cargo"] }
clap_complete = "3.1"
clap_generate = "3.0"
colored = "2.0"
common = { path = "../common", version = "0.1.0" }
exitcode = "1.1"
indoc = "1.0"
local-gateway = { path = "../local-gateway", version = "0.1.0" }
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
tracing-subscriber = "0.3.11"

[[bin]]
name = "grafbase"
