[package]
name = "grafbase"
version = "0.1.0"
edition = "2021"
description = "The Grafbase command line interface"
license = "Apache-2.0"
homepage = "https://grafbase.com"
keywords = ["grafbase"]
readme = "README.md"
repository = "https://github.com/grafbase/grafbase"
# TODO: populate categories
# categories = []

[dependencies]
clap = { version = "3", features = ["cargo"] }
clap_complete = "3"
clap_generate = "3"
colorize = { path = "../colorize", version = "0.1.0" }
common = { path = "../common", version = "0.1.0" }
ctrlc = "3"
exitcode = "1.1"
indoc = "1.0"
local-gateway = { path = "../local-gateway", version = "0.1.0" }
log = "0.4"
panic-hook = { path = "../panic_hook" }
thiserror = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[bin]]
name = "grafbase"
